RESOLVED FIXED109547
[EFL][WK2] Fix build warning after r142579
https://bugs.webkit.org/show_bug.cgi?id=109547
Summary [EFL][WK2] Fix build warning after r142579
Jinwoo Song
Reported 2013-02-11 23:25:47 PST
Use UNUSED_PARAM macro to fix -Wunused-parameter build warning.
Attachments
Patch (1.43 KB, patch)
2013-02-11 23:28 PST, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2013-02-11 23:28:11 PST
Kentaro Hara
Comment 2 2013-02-12 00:11:36 PST
LGTM. Adding WK2 owners.
WebKit Review Bot
Comment 3 2013-02-12 16:25:18 PST
Comment on attachment 187782 [details] Patch Clearing flags on attachment: 187782 Committed r142688: <http://trac.webkit.org/changeset/142688>
WebKit Review Bot
Comment 4 2013-02-12 16:25:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.