[EFL][WK2] Fix build warning after r142579 https://bugs.webkit.org/show_bug.cgi?id=109547

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2013-02-12
Reviewed by Alexey Proskuryakov.

Use UNUSED_PARAM macro to fix -Wunused-parameter build warning.

* UIProcess/efl/PageViewportControllerClientEfl.cpp:
(WebKit::PageViewportControllerClientEfl::didChangeContentsSize):

git-svn-id: svn://svn.chromium.org/blink/trunk@142688 bbb929c8-8fbe-4397-9dbb-9b2b20218538