third_party/WebKit/Source/WebKit2/UIProcess/efl/PageViewportControllerClientEfl.cpp
@@ -69,6 +69,7 @@ void PageViewportControllerClientEfl::updateViewportSize()
 
 void PageViewportControllerClientEfl::didChangeContentsSize(const WebCore::IntSize& contentsSize)
 {
+    UNUSED_PARAM(contentsSize);
     m_view->scheduleUpdateDisplay();
 }
 
